add functions to convert one-row data.tables and data.frames to vectors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(add_search_osm)
 export(add_tiles)
 export(aggregate_days)
+export(data.frame_to_vector)
+export(data.table_to_vector)
+export(data_table_to_vector)
 export(db_execute)
 export(db_query)
 export(get_date_info)
