--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_search_osm)
 export(add_tiles)
 export(aggregate_days)
+export(check_valid_date)
 export(data.frame_to_vector)
 export(data.table_to_vector)
 export(data_table_to_vector)
@@ -15,6 +16,7 @@ export(make_popup_sightings)
 export(navbarPageWithText)
 export(navbar_page_with_text)
 export(phenogram)
+export(show_toast)
 import(data.table)
 import(ggplot2)
 import(leaflet)
